[gd_scene load_steps=7 format=3 uid="uid://h45qc003t8yu"]

[ext_resource type="LabelSettings" uid="uid://bvsi5ttankr1t" path="res://assets/lg_48_gr.tres" id="1_i2om0"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_t47sv"]
[ext_resource type="LabelSettings" uid="uid://b3nncembdnxta" path="res://assets/lg_96_bl.tres" id="2_mmu3g"]
[ext_resource type="FontFile" uid="uid://dixd1560mw0yq" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_txa6t"]
[ext_resource type="AudioStream" uid="uid://i0me08qbfpgg" path="res://assets/audio/jazzyfrenchy.mp3" id="4_aoycy"]

[sub_resource type="LabelSettings" id="LabelSettings_cm8pk"]
font = ExtResource("3_txa6t")
font_size = 48
font_color = Color(0.215686, 0.631373, 1, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.356863)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_t47sv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "LEVEL 10"
label_settings = ExtResource("1_i2om0")

[node name="AttemptsLevel" type="Label" parent="MarginContainer/VB"]
layout_mode = 2
text = "ATTEMPTS 100"
label_settings = ExtResource("1_i2om0")

[node name="VB2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CompleteLabel" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_mmu3g")

[node name="CompleteLabel2" type="Label" parent="MarginContainer/VB2"]
layout_mode = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_cm8pk")
horizontal_alignment = 1

[node name="GameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_aoycy")
